# sentinelmcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SKILL.md  agent.py  docker-compose.yml  pyproject.toml  sentinelmcp_poc.py  sentinelmcp_website.html
.claude/: launch.json
.github/workflows/: ci.yml  deploy-dashboard.yml
admin/: index.html  server.py
app/: config.py  deps.py  main.py
app/core/: alerts.py  allowlist.py  auth.py  circuit_breaker.py  database.py  keys.py  llm_analyzer.py  policy_engine.py  rate_limit.py  redis.py  telemetry.py  threat_log.py
app/detection/: patterns.py
app/gateway/: adapters_router.py  auth_router.py  context_layer.py  keys_router.py  output_layer.py  param_layer.py  probe_router.py  proxy.py  proxy_router.py  router.py  schema_layer.py  validator.py
app/models/: db.py  schemas.py
dashboard/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard/src/: App.jsx  api.js  index.css
dashboard/src/components/: Sidebar.jsx
dashboard/src/pages/: Inventory.jsx  Latency.jsx  ThreatFeed.jsx
demo/: agent_demo.py  clean_server.py  demo.py  poisoned_server.py  sentinel_agent.py  sentinel_knowledge.py  sentinel_mcp_server.py  vulnerable_agent.py
docs/: CNAME  ha-setup.md
docs/dashboard/: 404.html  index.html
docs/dashboard/assets/: index-AWS_HoqR.js  index-BvxRvexk.css
extension/: .vscodeignore  CHANGELOG.md  LICENSE  PUBLISH.md  README.md  package-lock.json  package.json  tsconfig.json
extension/src/: api.ts  extension.ts
grafana/dashboards/: sentinelmcp.json
grafana/provisioning/dashboards/: default.yml
grafana/provisioning/datasources/: postgres.yml
helm/sentinelmcp/: Chart.yaml  values.yaml
helm/sentinelmcp/templates/: _helpers.tpl  deployment-api.yaml  deployment-dashboard.yaml  deployment-worker.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml  statefulset-postgres.yaml  statefulset-redis.yaml
policies/: default.yaml
sentinelmcp_sdk/: __init__.py  client.py  exceptions.py  middleware.py
tests/: conftest.py  test_auth.py  test_context_layer.py  test_output_layer.py  test_owasp_patterns.py  test_param_layer.py  test_proxy.py  test_schema_layer.py
tests/fixtures/: clean_tools.json  poisoned_tools.json
worker/: tasks.py
