[project]
name = "sentinelmcp"
version = "0.1.0"
description = "Zero-trust security gateway for MCP connections"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "redis>=5",
    "pydantic>=2",
    "pydantic-settings",
    "structlog",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "fakeredis",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools.packages.find]
include = ["app*", "worker*"]
