[project]
name = "sentinelmcp"
version = "0.2.0"
description = "AI Agent Security Gateway for MCP connections"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "redis>=5",
    "pydantic>=2",
    "pydantic-settings",
    "structlog",
    "scikit-learn",
    "celery[redis]",
    "httpx",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "slowapi",
    "pyyaml",
]

[project.optional-dependencies]
demo = [
    "langchain>=0.1,<0.2",
    "langchain-community>=0.0.20,<0.1",
    "langgraph>=0.0.30,<0.2",
    "faiss-cpu",
    "aiohttp",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "respx",
    "fakeredis",
    "anyio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools.packages.find]
include = ["app*", "worker*"]
